--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -155,11 +155,12 @@
         <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
         <div class="page-buttons">
             <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
-                <button (click)="changePage('previous')" mat-raised-button>
-                    back
-                </button>
+               
                 <button (click)="changePage('previous')" mat-icon-button>
                     <mat-icon class="full-icon">chevron_left</mat-icon>
+                </button>
+                <button (click)="changePage('previous')" mat-icon-button>
+                    Prev
                 </button>
                 <div *ngFor="let page of bmxPages; let pageIndex = index">
                     <button style="min-width: 35px;" (click)="selectPageNumber(pageIndex)"
@@ -168,13 +169,12 @@
                     </button>
                 </div>
 
-            
                 <button (click)="changePage('next')" mat-icon-button>
-                   <mat-icon class="full-icon">chevron_right</mat-icon>
+                   Next 
                 </button>
-                <button  (click)="changePage('next')" mat-raised-button>
-                    continue 
-                 </button>
+                <button (click)="changePage('next')" mat-icon-button>
+                    <mat-icon class="full-icon">chevron_right</mat-icon>
+                </button>
             </div>
         </div>
         <!-- 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲 END PAGE BUTTONS AND DIRECTIONS -->
