--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -136,6 +136,13 @@
         text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #0bd659;
     }
+    .project-name-global{
+        color: #324395;
+        font-size: 25px;
+        transition: all 0.1s ease-in-out;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #0bd659;
+    }
 
     .page-design::-webkit-scrollbar {
         display: none;
@@ -163,7 +170,7 @@
     }
 
 
-   
+
     .emoji-handle {
         // position: absolute;
         top: 5px;
@@ -180,7 +187,7 @@
     .paragraph {
         margin-top: 10px;
         position: relative;
-        
+
         .save {
             outline: none;
             position: absolute;
@@ -222,7 +229,7 @@
         align-content: center;
     }
 
-   
+
 
     .project-list::-webkit-scrollbar {
         display: none;
@@ -257,7 +264,7 @@
         border: #76d354 4px solid;
     }
 
-    
+
 }
 
 // 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜 💜
