--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -13,7 +13,7 @@
     gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
         <!-- NAME CANDIATES -->
         <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">candidates 
+            <p style="margin: 0 0 -12px;color: #324395;">candidates
             </p>
             <input type="range" style="margin: 20px;width: 50px;"
                 [(ngModel)]="bmxItem.componentSettings[0].nameCandidatesWidth" class="slider-font-size" tickInterval="0.5"
@@ -57,7 +57,7 @@
         </div>
 
         <!-- ROW HEIGHT -->
-     
+
         <div style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">row height</p>
             <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
@@ -72,7 +72,7 @@
                 class="slider-font-size" tickInterval="0.1" min="2" max="40"
                 [value]="bmxItem.componentSettings[0].fontSize">
         </div>
-        
+
         <!-- RADIO -->
         <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
             <p style="margin: 0 0 -12px;color: #324395;">radio</p>
@@ -97,7 +97,7 @@
         <button (click)="insertTextColumn()" class="add-column" matTooltip="add text column" matTooltipPosition="above"
             mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">view_list</mat-icon>
-        </button>   
+        </button>
 
         <!-- <button (click)="insertRadioColumn()" class="add-column"  matTooltip="add radio column"
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
@@ -281,10 +281,11 @@
 
                         <!-- IF ELSE TEMPLATE INPUTS  -->
                         <div *ngIf="y !== 0  &&  columnName.includes('options') == true">
-                            <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index" 
+                            <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index"
                             style="display: flex;flex-direction: row;gap:10px; justify-content: space-between;  ">
                                 <label for="">{{checkBoxName}}</label>
-                                <input type="checkbox" [checked]="allComplete"
+                                <!-- <input type="checkbox" [checked]="allComplete" -->
+                                <input type="checkbox" [checked]="(testName['multipleChoice'] && testName['multipleChoice'].includes(checkBoxName))?true:allComplete"
                                     (change)="saveMultipleChoice(checkBoxName, y,  $event)">
                             </div>
                         </div>
@@ -370,7 +371,7 @@
 
                           <!-- IF ELSE TEMPLATE INPUTS  -->
                           <div *ngIf="y !== 0  &&  columnName.includes('options') == true">
-                            <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index" 
+                            <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index"
                             style="display: flex;flex-direction: row;gap:10px; justify-content: space-between;  ">
                                 <label for="">{{checkBoxName}}</label>
                                 <input type="checkbox" [checked]="allComplete"
@@ -390,7 +391,7 @@
                                 cols="50"></textarea>
                         </div>
 
-                        <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y" 
+                        <p (click)="(selectedCard == y)?selectedCard = '':selectedCard = y"
                         *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('options') != true) &&
                               columnName.includes('Comments') != true &&
                               columnName.includes('kata') != true &&
