--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
@@ -322,3 +322,81 @@
     </mat-icon>
 
 </div>
+
+
+<div *ngIf="true" class="feature-modal-box" cdkDrag>
+    <mat-card class="flex-column ">
+      <mat-icon style="font-size: 35px;color: #032c72; animation: fadeIn 0.6s ease-in-out 0.3s backwards;">
+        summarize
+      </mat-icon>
+      <br>
+      <h1>REPORT GENERATOR OPTIONS</h1><br>
+      <mat-card-content class="">
+        <h3><span style="font-weight: bold;">RESPONDENTS :</span> {{'list of repondents'}}</h3>
+        <div style="display:flex;flex-direction: row;justify-content: space-between;">
+          <mat-form-field appearance="outline" style="margin-right: 20px;">
+            <mat-label>Name</mat-label>
+            <input matInput type="number" min="0">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="margin-right: 20px;">
+            <mat-label>Description</mat-label>
+            <input matInput type="number" min="0">
+          </mat-form-field>
+          <mat-form-field appearance="outline" style="margin-right: 20px;">
+            <mat-label>Notes</mat-label>
+            <input matInput type="number" min="0">
+          </mat-form-field>
+        </div>
+      
+      </mat-card-content>
+     
+      <mat-card>
+        <mat-card-content>
+          <h2 class="example-h2">Checkbox configuration</h2>
+      
+          <section class="example-section">
+            <mat-checkbox class="example-margin" [(ngModel)]="checked">Checked</mat-checkbox>
+            <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Indeterminate</mat-checkbox>
+          </section>
+      
+          <section class="example-section">
+            <label class="example-margin">Align:</label>
+            <mat-radio-group [(ngModel)]="labelPosition">
+              <mat-radio-button class="example-margin" value="after">After</mat-radio-button>
+              <mat-radio-button class="example-margin" value="before">Before</mat-radio-button>
+            </mat-radio-group>
+          </section>
+      
+          <section class="example-section">
+            <mat-checkbox class="example-margin" [(ngModel)]="disabled">Disabled</mat-checkbox>
+          </section>
+        </mat-card-content>
+      </mat-card>
+      
+      <mat-card class="result">
+        <mat-card-content>
+          <h2 class="example-h2">Result</h2>
+      
+          <section class="example-section">
+            <mat-checkbox
+                class="example-margin"
+                [(ngModel)]="checked"
+                [(indeterminate)]="indeterminate"
+                [labelPosition]="labelPosition"
+                [disabled]="disabled">
+              I'm a checkbox
+            </mat-checkbox>
+          </section>
+        </mat-card-content>
+      </mat-card>
+
+    </mat-card>
+  
+    <mat-card class="flex-column ">
+      <div class="buttons-home-page">
+        <button class="button" mat-raised-button 
+          style="color: #032c72;background: white;box-shadow: 0 1px 8px 0 rgb(0 0 0 / 40%);">cancel</button>
+        <button class="button"   [ngClass]="(true)?'active':'no-active'" mat-raised-button>submit</button>
+      </div>
+    </mat-card>
+  </div>
