--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.scss
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.scss
@@ -223,13 +223,14 @@ textarea:placeholder-shown {
 .feature-modal-box {
     width: 800px;
     position: absolute;
-    top: 23vh;
-    left: 29vw;
-    // transform: translate(-50%, -53%);
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -53%);
+    transform: translate(-50%, -53%);
     border-radius: 3px;
     background-color: white;
-    border: solid 1px #022d71;
-    @include BoxShadow(6);
+    // border: solid 1px #022d71;
+    // @include BoxShadow(6);
     overflow: hidden;
 }
 
