--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -156,7 +156,10 @@
                         (dblclick)="removeDirector(i)">
                         <mat-icon>delete</mat-icon>
                     </button>
-
+                    <button mat-icon-button style="position: absolute; top: 72px; right: 5px;color: goldenrod;"
+                        (dblclick)="replaceMainDirector(i)">
+                        <mat-icon>star</mat-icon>
+                    </button>
                 </div>
 
             </mat-card>
