--- a/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
+++ b/src/app/bmx/bmx-creator/docx-survey/docx-survey.component.html
@@ -28,7 +28,7 @@
         </ng-container>
 
         <ng-container matColumnDef="Name">
-            <th mat-header-cell *matHeaderCellDef> Select All </th>
+            <th mat-header-cell *matHeaderCellDef> User </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
         </ng-container>
 
