--- a/src/app/bmx/bmx-creator/project-list/project-list.component.html
+++ b/src/app/bmx/bmx-creator/project-list/project-list.component.html
@@ -17,19 +17,19 @@
             <div>
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
                     <!-- Position Column -->
-                    <ng-container matColumnDef="Client">
+                    <ng-container matColumnDef="bmxCompany">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Client</th>
                         <td mat-cell *matCellDef="let element"> {{element.bmxCompany}} </td>
                     </ng-container>
-                    <ng-container matColumnDef="ProjectName">
+                    <ng-container matColumnDef="bmxProjectName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
                         <td mat-cell *matCellDef="let element"> {{element.bmxProjectName}} </td>
                     </ng-container>
-                    <ng-container matColumnDef="Department">
+                    <ng-container matColumnDef="bmxDepartment">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Department </th>
                         <td mat-cell *matCellDef="let element"> {{element.bmxDepartment}} </td>
                     </ng-container>
-                    <ng-container matColumnDef="Office">
+                    <ng-container matColumnDef="bmxRegion">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
                         <td mat-cell *matCellDef="let element"> {{element.bmxRegion}} </td>
                     </ng-container>
@@ -45,7 +45,7 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-icon-button  style="color: #488abc;" aria-label="Example icon button with a home icon"
-                                (click)="sendEmail(element.ProjectName)">
+                                (click)="sendEmail(element.bmxProjectName)">
                                 <mat-icon>email</mat-icon>
                             </button>
                         </td>
