--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div *ngIf="userRole != 'user'" class="main-container">
 
   <button class="no-print" *ngIf="globalProjectName.length > 0"
     style="position: absolute;bottom: 30px;z-index: 9999999999;right: 150px;outline: none;"
@@ -49,8 +49,8 @@
       <button mat-icon-button style="background-color: white;margin: 0 20px 0 20px">
         <mat-icon>account_circle</mat-icon>
       </button>
-      <div style="color: white; text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
-        welcome {{userName}} !
+      <div style="color: white; text-align: start;font-family: Arial, Helvetica, sans-serif;font-size: 16px;">
+        welcome {{userFullName}} !
       </div>
     </div>
 
@@ -61,7 +61,7 @@
         <button mat-icon-button style="margin: 0 20px 0 10px">
           <mat-icon style="font-size: 40px;">list</mat-icon>
         </button>
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
           {{'Project List'}}
         </div>
       </div>
@@ -71,13 +71,13 @@
                 </button>
 
                 <div style=" display: flex;flex-direction: column;align-items: flex-start;">
-                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                         {{'Open Links'}}
                     </div>
-                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                         {{'Archive'}}
                     </div>
-                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                    <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                         {{'Stats'}}
                     </div>
                 </div>
@@ -87,16 +87,16 @@
                     <mat-icon style="font-size: 40px;">mail</mat-icon>
                 </button>
                 <div class="title secondary-text"
-                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                     {{'Matrix Invites'}}
                 </div>
             </div> -->
-      <div [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
+      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
         (click)="toggleMenuActive('isMenuActive8');isMainMenuActive = false ">
         <button mat-icon-button style="margin: 0 20px 0 10px">
           <mat-icon style="font-size: 40px;">edit</mat-icon>
         </button>
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
           {{'Create/Edit Matrix'}}
         </div>
       </div>
@@ -104,7 +104,7 @@
                 <button mat-icon-button style="margin: 0 20px 0 10px">
                     <mat-icon style="font-size: 40px;">stacked_bar_chart</mat-icon>
                 </button>
-                <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                     {{'Reports'}}
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 <button mat-icon-button style="margin: 0 20px 0 10px">
                     <mat-icon style="font-size: 40px;">settings</mat-icon>
                 </button>
-                <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;">
+                <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;">
                     {{'Settings'}}
                 </div>
             </div> -->
@@ -122,16 +122,16 @@
 
     <!-- SIDE MENU 🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀 -->
     <div class="menu" *ngIf="!isMainMenuActive">
-      <div [ngClass]="(isMenuActive8)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive8')">
+      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive8)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive8')">
 
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Project Information'}}
         </div>
       </div>
       <!-- <div [ngClass]="(isMenuActive9)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive9')">
                 <div style=" display: flex;flex-direction: column;align-items: flex-start;">
                     <div
-                        style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+                        style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
                         {{'Templates'}}
                     </div>
 
@@ -139,39 +139,39 @@
             </div>-->
       <!-- <div [ngClass]="(isMenuActive10)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive10')">
                 <div class="title secondary-text"
-                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
                     {{'Image Uploader'}}
                 </div>
             </div> -->
-      <div [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Survey Creation & Design'}}
         </div>
       </div>
       <!-- <div [ngClass]="(isMenuActive12)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive12')">
                 <div
-                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
                     {{'Introduction'}}
                 </div>
             </div>
             <div [ngClass]="(isMenuActive13)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive13')">
                 <div
-                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+                    style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
                     {{'Page Modules'}}
                 </div>
             </div> -->
       <div [ngClass]="(isMenuActive14)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive14')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Participants'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive15)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive15')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Survey Participants/Email'}}
         </div>
       </div>
       <div [ngClass]="(isMenuActive16)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive16')">
-        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 20px;padding-left:20px">
+        <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Reports'}}
         </div>
       </div>
@@ -188,7 +188,7 @@
 
   <!-- PROJECT LIST COMPONENT 📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀📀-->
   <div class="project-list" *ngIf="isMenuActive1" style="border: hotpink solid 0px; width: 75%; height: 100vh;">
-    <app-project-list [isMenuActive1]="isMenuActive1" (isMenuActive1Close)="editBM($event)"
+    <app-project-list [isMenuActive1]="isMenuActive1" [userRole]="userRole" [userOffice]="userOffice" [userDepartment]="userDepartment" (isMenuActive1Close)="editBM($event)"
       (isMenuActive1Email)="emailBM($event)"></app-project-list>
   </div>
 
@@ -379,4 +379,23 @@
 
   <!-- END  📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌📌 SECOND MENU SECTION PAGES -->
 
+</div>
+
+<div *ngIf="userRole =='user'" class="userModal" cdkDrag>
+  <mat-card class="flex-column ">
+    <mat-icon style="font-weight: bold;font-size: 35px;color: #032c72; animation: fadeIn 0.6s ease-in-out 0.3s backwards;">info
+    </mat-icon>
+    <br>
+    <h1 >{{userFullName}} you dont have acces to the Brand Matrix </h1>
+    <mat-card-content class="">
+      <h3><span style="font-weight: bold;">Please contact IS Department </span></h3>
+    
+    </mat-card-content>
+  </mat-card>
+  <mat-card class="flex-column ">
+    <div class="buttons-home-page">
+      <!-- <button class="button " [ngClass]="(true)?'active':'no-active'"
+        mat-raised-button>Dismiss</button> -->
+    </div>
+  </mat-card>
 </div>
