--- a/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
+++ b/src/app/bmx/bmx-creator/project-reports/project-reports.component.html
@@ -47,7 +47,7 @@
       <hr>
       <div style="display:flex;flex-direction: column;justify-content: center;align-items: center;">
         <h3><span style="font-weight: bold;">SELECT RESPONDENTS</span></h3>
-        <app-docx-survey> [reportSettings]="reportSettings" [isMenuActive5]="true"></app-docx-survey>
+        <app-docx-survey [reportSettings]="reportSettings"  [isMenuActive5]="true"></app-docx-survey>
       </div>
     </mat-card-content>
   </mat-card>
