--- a/src/app/bmx/bmx-creator/bmx-creator.component.html
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.html
@@ -49,6 +49,8 @@
         <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
       <div style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;font-size: 16px;margin-top: 10px;">
         Welcome {{userFullName}}
+        <br>
+        Role: {{userRole}}
       </div>
     </div>
 
@@ -89,7 +91,7 @@
                     {{'Matrix Invites'}}
                 </div>
             </div> -->
-      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
+      <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive4)?'menu-active':'menu-item'"
         (click)="toggleMenuActive('isMenuActive8');isMainMenuActive = false ">
         <button mat-icon-button style="margin: 0 20px 0 10px">
           <mat-icon style="font-size: 40px;">edit</mat-icon>
@@ -120,7 +122,7 @@
 
     <!-- SIDE MENU 🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀🎀 -->
     <div class="menu" *ngIf="!isMainMenuActive">
-      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive8)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive8')">
+      <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive8)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive8')">
 
         <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Project Information'}}
@@ -141,7 +143,7 @@
                     {{'Image Uploader'}}
                 </div>
             </div> -->
-      <div *ngIf="!(userRole == 'director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
+      <div *ngIf="!(userRole == 'Director')" [ngClass]="(isMenuActive11)?'menu-active':'menu-item'" (click)="toggleMenuActive('isMenuActive11')">
         <div style=" text-align: end;font-family: Arial, Helvetica, sans-serif;font-size: 18px;padding-left:20px">
           {{'Survey Creation & Design'}}
         </div>
