adding new bi markers in progress with multiple bugs

--- a/src/app/bmx/bmx-creator/project-information/project-information.component.html
+++ b/src/app/bmx/bmx-creator/project-information/project-information.component.html
@@ -152,11 +152,11 @@
                             <mat-icon>check_circle</mat-icon>
                         </button>
                     </ng-template>
-                    <button mat-icon-button style="position: absolute; top: 45px; right: 5px;color: red;"
+                    <button mat-icon-button  matTooltip="double click" matTooltipPosition="right" style="position: absolute; top: 45px; right: 5px;color: red;"
                         (dblclick)="removeDirector(i)">
                         <mat-icon>delete</mat-icon>
                     </button>
-                    <button mat-icon-button style="position: absolute; top: 72px; right: 5px;color: goldenrod;"
+                    <button mat-icon-button matTooltip="double click" matTooltipPosition="right" style="position: absolute; top: 72px; right: 5px;color: goldenrod;"
                         (dblclick)="replaceMainDirector(i)">
                         <mat-icon>star</mat-icon>
                     </button>
