--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -1,7 +1,7 @@
 <div class="desktop">
-    <span
+    <!-- <span
         style="color: #053074;font-size: 30px;outline: none;font-family: Arial, Helvetica, 
-        sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}</span>
+        sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}</span> -->
         <div class="emoji-handle">.</div>
     <div
         style="display: flex;flex-direction: row;justify-items: center;justify-content: space-between;align-items: center;margin: -30px 35px;">
@@ -11,20 +11,29 @@
                 bmxItem.componentSettings[0].brandInstituteLogoURL">
         </div>
         <div>
-            <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
+            <input  type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
                 accept="image/x-png,image/gif,image/jpeg">
-
+                
             <div *ngIf="displayLogoWidthRange && bmxClientPageOverview" (mouseleave)="displayLogoWidthRange = false"
-                style="position: absolute;top: 0px;right: 0px;">
+                style="position: absolute;top: -15px;right: 0px;">
+
+                <mat-icon 
+                 matTooltip="click to hide" matTooltipPosition="left" 
+                 style="cursor: pointer;position: absolute;top: 19px;right: 167px;z-index: 999;"
+                (click)="deleteIcon()">cancel</mat-icon>
+
                 <p style="margin: 0 0 -12px;color: grey;">logo width: {{bmxItem.componentSettings[0].logoWidth}} px</p>
                 <input type="range" style="margin: 20px;width: 140px;    text-align: center;"
                     [(ngModel)]="bmxItem.componentSettings[0].logoWidth" class="slider-font-size" tickInterval="1"
                     min="50" max="500" [value]="bmxItem.componentSettings[0].logoWidth">
+                
             </div>
 
             <img (mouseenter)="displayLogoWidthRange = true" (dblclick)="fileUpload.click()"
                 [width]="bmxItem.componentSettings[0].logoWidth" style="margin-top: 60px;cursor: pointer;"
                 [src]="bmxItem.componentSettings[0].companyLogoURL">
+
+
         </div>
     </div>
 </div>
